Fix: TB2-5072 sidescreen overlap

--- a/src/styles.css
+++ b/src/styles.css
@@ -4124,13 +4124,17 @@ pagination-controls {
 }
 
 .back-foot {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #F5F5FA;
-  position: fixed;
+  /*position: fixed;*/
   bottom: 0px;
   width: 100%;
   left: 0px;
   border-top: 1px solid #cccccc;
   padding-top: 5px;
+  transition: padding-left 0.3s; /* Smooth transition for padding */
 }
 
 .lgtBtn {
